plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'DigitalEye'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(22)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	google()
}
compileJava.options.encoding = "UTF-8"
tasks.withType(JavaCompile){
	options.encoding = "UTF-8"
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.jetbrains:annotations:23.0.0'

	implementation 'com.google.cloud:google-cloud-speech:4.42.0'//구글 클라이언트 라이브러리
	implementation 'com.google.cloud:google-cloud-apikeys:0.45.0' //ApiKeysSettings
	implementation 'com.google.cloud:google-cloud-storage' //Storage API


	implementation platform("com.google.cloud:libraries-bom:25.1.0")
	implementation("com.google.cloud:google-cloud-speech") //Speech-to-text API
	implementation("com.google.cloud:google-cloud-service-management") //Service Management API

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//공공데이터 사용을 위한
	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	runtimeOnly 'com.h2database:h2'

	implementation 'mysql:mysql-connector-java'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.32'
}
application {
	mainClassName = 'speechrecognition.sttTest'
}


tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(JavaCompile) {
	options.compilerArgs << "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs '--enable-preview'
}

tasks.withType(JavaExec) {
	jvmArgs '--enable-preview'
}

